public/restaurant.css
.restaurant-article {
    display: grid;

    grid-template-columns: 1fr;
    grid-template-rows: max-content;

    gap: 2cm;

    align-items: center;
    align-content: center;
    text-align: center;
    align-self: center;
    justify-content: center;
    justify-items: center;

    padding: 5%;
}

.description-box {
    position: relative;

    width: 100%;
    height: 30em;

    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.description-box .pane-cover {
    position: absolute;
    display: block;

    bottom: 0;
    left: 0;
    right: 0;
    top: 66%;

    padding: 2em;

    border-radius: 0 0 0.5cm 0.5cm;

    justify-content: center;
    align-items: center;
    align-content: center;
    text-align: center;
}

.pane-cover-header {
    position: absolute;

    bottom: 1em;
    right: 2em;

    width: min-content;

    text-align: end;
    justify-content: right;
}

.menu-grid {
    display: grid;

    grid-template-areas: 'name price';
    grid-template-columns: 5fr, 1fr;

    gap: 2em;
}

.menu {
    width: 60%;
    padding-top: 5em;
    padding-left: 20%;
    padding-right: 20%;
    padding-bottom: 5em;
}

